32) Replace some code from original Ralink SDK version 3.3<br>
33) Integrate new web gui in current sources tree <br>
34) Static routes get from dhcp server (options 79)<br>
35) busybox update to 1.16.0 version<br>
36) Replace ntpclient to ntpd from new busybox<br>
37) Add multiple default gateway support for load balacing<br>
38) Fix boot on 4/16 devices<br>
39) RootFS on flash work OK<br>
40) Fix resolve server ip for pptp/l2tp<br>
41) Add support others type falsh<br>
42) Job control fix<br>
43) Fix some daemons crash with error build in future<br>
44) fs save now save current date and time to rwfs<br>
45) Fix configure esw mode and more modes add<br>
46) Fix pppoe reconnect<br>
47) Fix pppoe long discovery<br>
48) Restore default gateway after VPN down<br>
49) WPS wscd daemon now work<br>
50) Fix dhcp lease parse<br>
51) busybox update to 1.16.1 version<br>
52) Fix pptp/pppoe/l2tp redials<br>
53) Radvd up to 1.6 version<br>
54) Masqrade for vpn move to ip-up/ip-down scripts<br>
55) NAT to ISP local net parallel then vpn work now<br>
56) Never increase MSS, even when setting it<br>
57) Backport small bridge patch<br>
58) Backport sock memalloc skb size from 2.6.23.4 kernel<br>
59) ACCEL-PPTP add module param description and mtu parametr<br>
60) Patch to fix cut end symbol at hostname in udhcpd lease<br>
61) Backport jhash3 patch from upstream<br>
62) More ipv6 fixes<br>
63) Improve pppoe perf<br>
64) pptp module patches from wl500 project<br>
65) More user/password length to pptp/l2tp mode<br>
66) More clean init.d scripts<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>
