@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.21.7
-# Mon May 31 10:53:54 2010
+# Mon May 31 20:03:38 2010
 #
 CONFIG_MIPS=y
 
@@ -14,11 +14,11 @@ CONFIG_RALINK_RT3052_MP2=y
 CONFIG_RALINK_RT3052=y
 # CONFIG_SERIAL_CONSOLE is not set
 CONFIG_RT3052_ASIC=y
-# CONFIG_RAM_SIZE_AUTO is not set
+CONFIG_RAM_SIZE_AUTO=y
 # CONFIG_RT2880_DRAM_8M is not set
 # CONFIG_RT2880_DRAM_16M is not set
-CONFIG_RT2880_DRAM_32M=y
-# CONFIG_RT2880_DRAM_64M is not set
+# CONFIG_RT2880_DRAM_32M is not set
+CONFIG_RT2880_DRAM_64M=y
 CONFIG_MTD_NOR_RALINK=y
 # CONFIG_MTD_SPI_RALINK is not set
 # CONFIG_MTD_NAND_RALINK is not set
@@ -28,7 +28,7 @@ CONFIG_RT2880_FLASH_4M=y
 # CONFIG_RT2880_FLASH_16M is not set
 # CONFIG_DUAL_IMAGE is not set
 # CONFIG_RT2880_FLASH_32M is not set
-CONFIG_RALINK_RAM_SIZE=32
+CONFIG_RALINK_RAM_SIZE=64
 CONFIG_MTD_PHYSMAP_START=0xBF000000
 CONFIG_MTD_PHYSMAP_LEN=0x400000
 CONFIG_MTD_PHYSMAP_BUSWIDTH=2
